--- a/HR Policies.html
+++ b/HR Policies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
 <head>
-<title></title>
+<title>HR Policies</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
  <br/>
@@ -16,6 +16,7 @@
 <body bgcolor="#A0A0A0" vlink="blue" link="blue">
 <div id="page1-div" style="position:relative;width:892px;height:1262px;">
 <img width="892" height="1262" src="target001.png" alt="background image"/>
+<h2>HR Policies</h2>
 <p style="position:absolute;top:54px;left:240px;white-space:nowrap" class="ft10"><b>Human Resources Policy Document</b></p>
 <p style="position:absolute;top:141px;left:47px;white-space:nowrap" class="ft11"><b>1. Onboarding Policy</b></p>
 <p style="position:absolute;top:184px;left:47px;white-space:nowrap" class="ft12">Objective:</p>
@@ -40,26 +41,6 @@
 <p style="position:absolute;top:1035px;left:47px;white-space:nowrap" class="ft12">- Appeals: Employees may request a review of promotion decisions through HR.</p>
 <p style="position:absolute;top:1119px;left:47px;white-space:nowrap" class="ft11"><b>3. Disciplinary Actions Policy</b></p>
 <p style="position:absolute;top:1162px;left:47px;white-space:nowrap" class="ft12">Objective:</p>
-</div>
-</body>
-</html>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
-<head>
-<title></title>
-
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
- <br/>
-<style type="text/css">
-<!--
-	p {margin: 0; padding: 0;}	.ft20{font-size:14px;font-family:Helvetica;color:#000000;}
-	.ft21{font-size:16px;font-family:Helvetica;color:#000000;}
--->
-</style>
-</head>
-<body bgcolor="#A0A0A0" vlink="blue" link="blue">
-<div id="page2-div" style="position:relative;width:892px;height:1262px;">
-<img width="892" height="1262" src="target002.png" alt="background image"/>
 <p style="position:absolute;top:57px;left:47px;white-space:nowrap" class="ft20">Maintain a respectful, safe, and productive work environment through consistent and fair disciplinary</p>
 <p style="position:absolute;top:99px;left:47px;white-space:nowrap" class="ft20">procedures.</p>
 <p style="position:absolute;top:142px;left:47px;white-space:nowrap" class="ft20">Policy Guidelines:</p>
