Update background color in HR Policies document for improved visibility

--- a/HR Policies.html
+++ b/HR Policies.html
@@ -13,7 +13,7 @@
 -->
 </style>
 </head>
-<body bgcolor="#A0A0A0" vlink="blue" link="blue">
+<body bgcolor= white vlink="blue" link="blue">
 <h2>HR Policies</h2>
 <div id="page1-div" style="position:relative;width:892px;height:2400px;">
 <p style="position:absolute;top:54px;left:240px;white-space:nowrap" class="ft10"><b>Human Resources Policy Document</b></p>
