Remove background color and image from Leave Process document for cleaner presentation

--- a/Leave Process.html
+++ b/Leave Process.html
@@ -19,9 +19,9 @@
 -->
 </style>
 </head>
-<body bgcolor="#A0A0A0" vlink="blue" link="blue">
+<body vlink="blue" link="blue">
+	<h2>Leave Process</h2>
 <div id="page1-div" style="position:relative;width:892px;height:1262px;">
-<img width="892" height="1262" src="target001.png" alt="background image"/>
 <p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft10">&#160;&#160;</p>
 <p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft11">&#160;</p>
 <p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft12">&#160;</p>
