Refactor Leave Process document for improved structure and readability

--- a/leave-process.html
+++ b/leave-process.html
@@ -1,85 +1,73 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<!doctype html>
+<html lang="en">
 <head>
-<title></title>
-
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
- <br/>
-<style type="text/css">
-<!--
-	p {margin: 0; padding: 0;}	.ft10{font-size:14px;font-family:Times;color:#000000;}
-	.ft11{font-size:14px;font-family:Times;color:#16c50c;}
-	.ft12{font-size:14px;font-family:Times;color:#eba200;}
-	.ft13{font-size:14px;font-family:Times;color:#3995dd;}
-	.ft14{font-size:14px;font-family:Times;color:#ffb800;}
-	.ft15{font-size:14px;font-family:Times;color:#e81223;}
-	.ft16{font-size:14px;font-family:Times;color:#ffd579;}
-	.ft17{font-size:14px;font-family:Times;color:#000000;}
-	.ft18{font-size:12px;font-family:Times;color:#000000;}
--->
-</style>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Leave Process</title>
 </head>
-<body vlink="blue" link="blue">
-	<h2>Leave Process</h2>
-<div id="page1-div" style="position:relative;width:892px;height:1262px;">
-<p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft10">&#160;&#160;</p>
-<p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft11">&#160;</p>
-<p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft12">&#160;</p>
-<p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft13">&#160;</p>
-<p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft14">&#160;</p>
-<p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft15">&#160;</p>
-<p style="position:absolute;top:114px;left:108px;white-space:nowrap" class="ft16">&#160;</p>
-<p style="position:absolute;top:110px;left:131px;white-space:nowrap" class="ft17"><b>&#160;Step-by-Step&#160;Leave&#160;Request&#160;Process&#160;</b></p>
-<p style="position:absolute;top:144px;left:108px;white-space:nowrap" class="ft17"><b>1.&#160;Check&#160;Leave&#160;Entitlement&#160;</b></p>
-<p style="position:absolute;top:178px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:178px;left:162px;white-space:nowrap" class="ft10">Review&#160;your&#160;company’s&#160;leave&#160;policy&#160;(e.g.,&#160;annual&#160;leave,&#160;sick&#160;leave,&#160;casual&#160;leave,&#160;etc.).&#160;</p>
-<p style="position:absolute;top:212px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:212px;left:162px;white-space:nowrap" class="ft10">Confirm&#160;how&#160;many&#160;days&#160;you&#160;have&#160;available&#160;and&#160;any&#160;blackout&#160;periods.&#160;</p>
-<p style="position:absolute;top:245px;left:108px;white-space:nowrap" class="ft17"><b>2.&#160;Plan Ahead&#160;</b></p>
-<p style="position:absolute;top:280px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:279px;left:162px;white-space:nowrap" class="ft10">Choose&#160;dates&#160;that&#160;minimize&#160;disruption&#160;to&#160;your&#160;team&#160;or&#160;project.&#160;</p>
-<p style="position:absolute;top:313px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:313px;left:162px;white-space:nowrap" class="ft10">Coordinate&#160;with&#160;colleagues&#160;if&#160;coverage&#160;is&#160;needed&#160;during&#160;your&#160;absence.&#160;</p>
-<p style="position:absolute;top:347px;left:108px;white-space:nowrap" class="ft17"><b>3.&#160;Draft&#160;a&#160;Leave&#160;Request&#160;</b></p>
-<p style="position:absolute;top:380px;left:108px;white-space:nowrap" class="ft10">Include:&#160;</p>
-<p style="position:absolute;top:415px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:414px;left:162px;white-space:nowrap" class="ft10">Type&#160;of&#160;leave&#160;(e.g.,&#160;annual,&#160;sick,&#160;personal)&#160;</p>
-<p style="position:absolute;top:448px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:448px;left:162px;white-space:nowrap" class="ft10">Start&#160;and&#160;end&#160;dates&#160;</p>
-<p style="position:absolute;top:482px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:482px;left:162px;white-space:nowrap" class="ft10">Reason&#160;(brief&#160;but&#160;clear—e.g.,&#160;“family&#160;commitment”&#160;or&#160;“medical&#160;appointment”)&#160;</p>
-<p style="position:absolute;top:516px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:515px;left:162px;white-space:nowrap" class="ft10">Any&#160;handover&#160;or&#160;delegation&#160;plan&#160;</p>
-<p style="position:absolute;top:549px;left:108px;white-space:nowrap" class="ft17"><b>4.&#160;Submit&#160;the&#160;Request&#160;</b></p>
-<p style="position:absolute;top:583px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:583px;left:162px;white-space:nowrap" class="ft10">Use&#160;your&#160;company’s&#160;official&#160;channel&#160;(HR&#160;portal, email, or&#160;leave&#160;management&#160;system).&#160;</p>
-<p style="position:absolute;top:617px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:617px;left:162px;white-space:nowrap" class="ft10">Submit&#160;well&#160;in&#160;advance&#160;unless&#160;it’s&#160;an&#160;emergency.&#160;</p>
-<p style="position:absolute;top:650px;left:108px;white-space:nowrap" class="ft17"><b>5.&#160;Get&#160;Approval&#160;</b></p>
-<p style="position:absolute;top:685px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:684px;left:162px;white-space:nowrap" class="ft10">Wait&#160;for&#160;confirmation&#160;from&#160;your&#160;manager&#160;or&#160;HR.&#160;</p>
-<p style="position:absolute;top:718px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:718px;left:162px;white-space:nowrap" class="ft10">Follow&#160;up&#160;if&#160;needed,&#160;especially&#160;for&#160;time-sensitive&#160;requests.&#160;</p>
-<p style="position:absolute;top:752px;left:108px;white-space:nowrap" class="ft17"><b>6.&#160;Prepare for&#160;Absence&#160;</b></p>
-<p style="position:absolute;top:786px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:785px;left:162px;white-space:nowrap" class="ft10">Complete&#160;pending&#160;tasks&#160;or&#160;delegate&#160;responsibilities.&#160;</p>
-<p style="position:absolute;top:820px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:819px;left:162px;white-space:nowrap" class="ft10">Set&#160;up&#160;out-of-office&#160;replies&#160;for&#160;email&#160;and&#160;messaging&#160;platforms.&#160;</p>
-<p style="position:absolute;top:853px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:853px;left:162px;white-space:nowrap" class="ft10">Share&#160;contact&#160;details&#160;if&#160;you’ll&#160;be&#160;reachable&#160;in&#160;emergencies.&#160;</p>
-<p style="position:absolute;top:886px;left:108px;white-space:nowrap" class="ft17"><b>7.&#160;Take&#160;Leave&#160;</b></p>
-<p style="position:absolute;top:921px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:920px;left:162px;white-space:nowrap" class="ft10">Disconnect&#160;as&#160;planned.&#160;</p>
-<p style="position:absolute;top:954px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:954px;left:162px;white-space:nowrap" class="ft10">Respect&#160;boundaries&#160;unless&#160;prior&#160;arrangements&#160;were&#160;made&#160;to&#160;stay&#160;partially&#160;available.&#160;</p>
-<p style="position:absolute;top:988px;left:108px;white-space:nowrap" class="ft17"><b>8.&#160;Return&#160;and&#160;Resume&#160;</b></p>
-<p style="position:absolute;top:1022px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:1021px;left:162px;white-space:nowrap" class="ft10">Catch&#160;up&#160;on&#160;missed&#160;updates.&#160;</p>
-<p style="position:absolute;top:1056px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:1055px;left:162px;white-space:nowrap" class="ft10">Thank&#160;colleagues&#160;who&#160;covered&#160;for&#160;you.&#160;</p>
-<p style="position:absolute;top:1089px;left:135px;white-space:nowrap" class="ft18">•&#160;</p>
-<p style="position:absolute;top:1089px;left:162px;white-space:nowrap" class="ft10">Submit&#160;any&#160;required&#160;documentation&#160;(e.g.,&#160;medical&#160;certificate&#160;for&#160;sick&#160;leave).&#160;</p>
-<p style="position:absolute;top:1123px;left:108px;white-space:nowrap" class="ft10">&#160;</p>
-</div>
+<body>
+	<h1>Leave Process</h1>
+	<ol>
+		<li>
+			<strong>Check leave entitlement</strong>
+			<ul>
+				<li>Review the company’s leave policy (annual, sick, casual, etc.).</li>
+				<li>Confirm your available days and any blackout periods.</li>
+			</ul>
+		</li>
+		<li>
+			<strong>Plan ahead</strong>
+			<ul>
+				<li>Choose dates that minimize disruption to your team or project.</li>
+				<li>Coordinate coverage if needed during your absence.</li>
+			</ul>
+		</li>
+		<li>
+			<strong>Draft a leave request</strong>
+			<ul>
+				<li>Type of leave (annual, sick, personal).</li>
+				<li>Start and end dates.</li>
+				<li>Brief reason (e.g., family commitment, medical appointment).</li>
+				<li>Handover or delegation plan.</li>
+			</ul>
+		</li>
+		<li>
+			<strong>Submit the request</strong>
+			<ul>
+				<li>Use the official channel (HR portal, email, or leave system).</li>
+				<li>Submit in advance unless it’s an emergency.</li>
+			</ul>
+		</li>
+		<li>
+			<strong>Get approval</strong>
+			<ul>
+				<li>Wait for confirmation from your manager or HR.</li>
+				<li>Follow up if needed for time-sensitive requests.</li>
+			</ul>
+		</li>
+		<li>
+			<strong>Prepare for absence</strong>
+			<ul>
+				<li>Complete pending tasks or delegate responsibilities.</li>
+				<li>Set up out-of-office replies (email and messaging).</li>
+				<li>Share emergency contact details if you’ll be reachable.</li>
+			</ul>
+		</li>
+		<li>
+			<strong>Take leave</strong>
+			<ul>
+				<li>Disconnect as planned.</li>
+				<li>Respect boundaries unless you arranged to be partially available.</li>
+			</ul>
+		</li>
+		<li>
+			<strong>Return and resume</strong>
+			<ul>
+				<li>Catch up on missed updates.</li>
+				<li>Thank colleagues who covered for you.</li>
+				<li>Submit any required documents (e.g., medical certificate).</li>
+			</ul>
+		</li>
+	</ol>
 </body>
 </html>
