Change header to 'How to apply for leave?'

--- a/leave-process.html
+++ b/leave-process.html
@@ -6,7 +6,7 @@
 	<title>Leave Process</title>
 </head>
 <body>
-	<h1>Leave Process</h1>
+	<h1>How to apply for leave?</h1>
 	<ol>
 		<li>
 			<strong>Check leave entitlement</strong>
