Update Leave Process document for clarity and structure

--- a/leave-process.html
+++ b/leave-process.html
@@ -8,67 +8,41 @@
 <body>
 	<a name="apply-leave"></a>
 	<h1>How to apply for leave?</h1>
-	<ol>
-		<li>
-			<strong>Check leave entitlement</strong>
-			<ul>
-				<li>Review the company’s leave policy (annual, sick, casual, etc.).</li>
-				<li>Confirm your available days and any blackout periods.</li>
-			</ul>
-		</li>
-		<li>
-			<strong>Plan ahead</strong>
-			<ul>
-				<li>Choose dates that minimize disruption to your team or project.</li>
-				<li>Coordinate coverage if needed during your absence.</li>
-			</ul>
-		</li>
-		<li>
-			<strong>Draft a leave request</strong>
-			<ul>
-				<li>Type of leave (annual, sick, personal).</li>
-				<li>Start and end dates.</li>
-				<li>Brief reason (e.g., family commitment, medical appointment).</li>
-				<li>Handover or delegation plan.</li>
-			</ul>
-		</li>
-		<li>
-			<strong>Submit the request</strong>
-			<ul>
-				<li>Use the official channel (HR portal, email, or leave system).</li>
-				<li>Submit in advance unless it’s an emergency.</li>
-			</ul>
-		</li>
-		<li>
-			<strong>Get approval</strong>
-			<ul>
-				<li>Wait for confirmation from your manager or HR.</li>
-				<li>Follow up if needed for time-sensitive requests.</li>
-			</ul>
-		</li>
-		<li>
-			<strong>Prepare for absence</strong>
-			<ul>
-				<li>Complete pending tasks or delegate responsibilities.</li>
-				<li>Set up out-of-office replies (email and messaging).</li>
-				<li>Share emergency contact details if you’ll be reachable.</li>
-			</ul>
-		</li>
-		<li>
-			<strong>Take leave</strong>
-			<ul>
-				<li>Disconnect as planned.</li>
-				<li>Respect boundaries unless you arranged to be partially available.</li>
-			</ul>
-		</li>
-		<li>
-			<strong>Return and resume</strong>
-			<ul>
-				<li>Catch up on missed updates.</li>
-				<li>Thank colleagues who covered for you.</li>
-				<li>Submit any required documents (e.g., medical certificate).</li>
-			</ul>
-		</li>
-	</ol>
+
+	<p><strong>Check leave entitlement</strong></p>
+	<p>Review the company’s leave policy (annual, sick, casual, etc.).</p>
+	<p>Confirm your available days and any blackout periods.</p>
+
+	<p><strong>Plan ahead</strong></p>
+	<p>Choose dates that minimize disruption to your team or project.</p>
+	<p>Coordinate coverage if needed during your absence.</p>
+
+	<p><strong>Draft a leave request</strong></p>
+	<p>Type of leave (annual, sick, personal).</p>
+	<p>Start and end dates.</p>
+	<p>Brief reason (e.g., family commitment, medical appointment).</p>
+	<p>Handover or delegation plan.</p>
+
+	<p><strong>Submit the request</strong></p>
+	<p>Use the official channel (HR portal, email, or leave system).</p>
+	<p>Submit in advance unless it’s an emergency.</p>
+
+	<p><strong>Get approval</strong></p>
+	<p>Wait for confirmation from your manager or HR.</p>
+	<p>Follow up if needed for time-sensitive requests.</p>
+
+	<p><strong>Prepare for absence</strong></p>
+	<p>Complete pending tasks or delegate responsibilities.</p>
+	<p>Set up out-of-office replies (email and messaging).</p>
+	<p>Share emergency contact details if you’ll be reachable.</p>
+
+	<p><strong>Take leave</strong></p>
+	<p>Disconnect as planned.</p>
+	<p>Respect boundaries unless you arranged to be partially available.</p>
+
+	<p><strong>Return and resume</strong></p>
+	<p>Catch up on missed updates.</p>
+	<p>Thank colleagues who covered for you.</p>
+	<p>Submit any required documents (e.g., medical certificate).</p>
 </body>
 </html>
