--- a/leave-process.html
+++ b/leave-process.html
@@ -9,40 +9,56 @@
 	<a name="apply-leave"></a>
 	<h1>How to apply for leave?</h1>
 
-	<p><strong>Check leave entitlement</strong></p>
-	<p>Review the company’s leave policy (annual, sick, casual, etc.).</p>
-	<p>Confirm your available days and any blackout periods.</p>
+	<p>
+		<strong>Check leave entitlement</strong><br>
+		Review the company’s leave policy (annual, sick, casual, etc.).<br>
+		Confirm your available days and any blackout periods.
+	</p>
 
-	<p><strong>Plan ahead</strong></p>
-	<p>Choose dates that minimize disruption to your team or project.</p>
-	<p>Coordinate coverage if needed during your absence.</p>
+	<p>
+		<strong>Plan ahead</strong><br>
+		Choose dates that minimize disruption to your team or project.<br>
+		Coordinate coverage if needed during your absence.
+	</p>
 
-	<p><strong>Draft a leave request</strong></p>
-	<p>Type of leave (annual, sick, personal).</p>
-	<p>Start and end dates.</p>
-	<p>Brief reason (e.g., family commitment, medical appointment).</p>
-	<p>Handover or delegation plan.</p>
+	<p>
+		<strong>Draft a leave request</strong><br>
+		Type of leave (annual, sick, personal).<br>
+		Start and end dates.<br>
+		Brief reason (e.g., family commitment, medical appointment).<br>
+		Handover or delegation plan.
+	</p>
 
-	<p><strong>Submit the request</strong></p>
-	<p>Use the official channel (HR portal, email, or leave system).</p>
-	<p>Submit in advance unless it’s an emergency.</p>
+	<p>
+		<strong>Submit the request</strong><br>
+		Use the official channel (HR portal, email, or leave system).<br>
+		Submit in advance unless it’s an emergency.
+	</p>
 
-	<p><strong>Get approval</strong></p>
-	<p>Wait for confirmation from your manager or HR.</p>
-	<p>Follow up if needed for time-sensitive requests.</p>
+	<p>
+		<strong>Get approval</strong><br>
+		Wait for confirmation from your manager or HR.<br>
+		Follow up if needed for time-sensitive requests.
+	</p>
 
-	<p><strong>Prepare for absence</strong></p>
-	<p>Complete pending tasks or delegate responsibilities.</p>
-	<p>Set up out-of-office replies (email and messaging).</p>
-	<p>Share emergency contact details if you’ll be reachable.</p>
+	<p>
+		<strong>Prepare for absence</strong><br>
+		Complete pending tasks or delegate responsibilities.<br>
+		Set up out-of-office replies (email and messaging).<br>
+		Share emergency contact details if you’ll be reachable.
+	</p>
 
-	<p><strong>Take leave</strong></p>
-	<p>Disconnect as planned.</p>
-	<p>Respect boundaries unless you arranged to be partially available.</p>
+	<p>
+		<strong>Take leave</strong><br>
+		Disconnect as planned.<br>
+		Respect boundaries unless you arranged to be partially available.
+	</p>
 
-	<p><strong>Return and resume</strong></p>
-	<p>Catch up on missed updates.</p>
-	<p>Thank colleagues who covered for you.</p>
-	<p>Submit any required documents (e.g., medical certificate).</p>
+	<p>
+		<strong>Return and resume</strong><br>
+		Catch up on missed updates.<br>
+		Thank colleagues who covered for you.<br>
+		Submit any required documents (e.g., medical certificate).
+	</p>
 </body>
 </html>
