Change header from 'How to apply for leave?' to 'Steps in the leave process'

--- a/leave-process.html
+++ b/leave-process.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<a name="apply-leave"></a>
-	<h1>How to apply for leave?</h1>
+	<h1>Steps in the leave process</h1>
 
 	<p>
 		<strong>Check leave entitlement</strong><br>
