Update features section with HR Policies link

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
                 <div id="features" class="features" style="margin-top:20px">
                     <article class="card">
-                        <h3 style="margin:0 0 8px 0">Responsive</h3>
-                        <p class="muted" style="margin:0">Works across devices with a fluid layout and simple CSS variables for theming.</p>
+                        <h3 style="margin:0 0 8px 0">HR Policies</h3>
+                        <p class="muted" style="margin:0"><a href="hr-policies.html">HR Policies</a></p>
                     </article>
                     <article class="card">
                         <h3 style="margin:0 0 8px 0">Accessible</h3>
