Change title and header text to HR Policies

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="Generic starter index page" />
-    <title>My Website</title>
+    <title>HR Policies</title>
 
     <!-- Basic styles (keep inline for a single-file starter) -->
     <style>
@@ -41,7 +41,7 @@
         <div class="container nav">
             <div class="brand">
                 <span class="logo" aria-hidden="true"></span>
-                <span>My Website</span>
+                <span>Human Resources (HR) Policies</span>
             </div>
 
             <nav aria-label="Primary">
