Update index.html for HR Policies page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="Generic starter index page" />
+    <meta name="description" content="HR Policies" />
     <title>HR Policies</title>
 
     <!-- Basic styles (keep inline for a single-file starter) -->
@@ -58,8 +58,8 @@
     <main class="container" id="home">
         <section class="hero">
             <div>
-                <h1>Simple, Flexible Starter Page</h1>
-                <p class="muted">A minimal, accessible starting point for web projects. Customize layout, components, and styles to fit your needs.</p>
+                <h1>HR Policies</h1>
+                <p class="muted">Human Resouces policies of the organization.</p>
 
                 <div style="margin-top:18px;display:flex;gap:10px;flex-wrap:wrap">
                     <a class="cta" href="#features">Get Started</a>
