Update About section to list HR policies

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             </div>
 
             <aside class="card" aria-labelledby="about">
-                <h2 id="about" style="margin-top:0">About this template</h2>
-                <p class="muted">Use this file as index.html for a new project. It contains a header, hero, feature cards, and a contact form. Replace text, colors, and components to match your brand.</p>
+                <h2 id="about" style="margin-top:0">List of HR Policies</h2>
+                <p class="muted"><ul><li>Onboarding Policy</li><li>Promotions Policy</li><li>Disciplinary Actions Policy</li><li>Inclusiveness Policy</li><li>Diversity Policy</li></ul></p>
                 <dl style="margin-top:12px;color:var(--muted);font-size:0.95rem">
                     <dt><strong>Author</strong></dt>
                     <dd>Starter</dd>
