Add summary to HR policy document
This summary outlines the key organizational practices related to HR policies, including onboarding, promotions, disciplinary actions, inclusiveness, and diversity.

--- a/hr-policies.html
+++ b/hr-policies.html
@@ -8,7 +8,13 @@
 <body>
   <article>
     <h1>Human Resources Policy Document</h1>
-
+    <p>
+      Summary: This HR policy document outlines key organizational practices across onboarding, promotions, disciplinary actions, inclusiveness, and diversity. 
+      It emphasizes structured onboarding with mentorship and feedback cycles, transparent promotion criteria based on performance and business needs, a progressive
+      disciplinary framework ensuring fairness and documentation, and a commitment to inclusiveness through respectful communication and accessibility. 
+      The diversity policy promotes equitable hiring, leadership development, and zero tolerance for bias, reflecting the organization’s dedication to a respectful 
+      and empowering workplace.
+    </p>
     <section id="onboarding">
       <h2>Onboarding Policy</h2>
       <p><strong>Objective:</strong> Ensure a smooth, welcoming, and efficient integration of new employees into the organization.</p>
