Update title to reflect organization name SSGS

--- a/hr-policies.html
+++ b/hr-policies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HR Policies</title>
+  <title>HR Policies for the organization SSGS</title>
   <meta name="description" content="Comprehensive HR policies including onboarding, promotions, disciplinary actions, inclusiveness, and diversity.">
 </head>
 <body>
