Update title for HR Policies page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="HR Policies" />
-    <title>HR Policies</title>
+    <title>List of HR Policies for the organization SSGS</title>
 
     <!-- Basic styles (keep inline for a single-file starter) -->
     <style>
